--- a/index.html
+++ b/index.html
@@ -3,36 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <title>Portfolio</title>
 </head>
 <body>
-    <h1></h1>
+ <div class="container">
+  <nav>
+    <img src="images/logo.png" class="logo">
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Resume</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+ <div class="text-box">
+    <p>I'M</p>
+    <h1>JOHN</h1>
+    <h3>I HELP COMPANIES MAKE A BEAUTIFUL WEBPAGE</h3>
 
-<nav>
-
-
-</nav>
-
-<header>
-
-
-</header>
-
-
-<main>
-
-
-</main>
-
-
-<footer>
-    
-</footer>
-
-
-
-
+    <div class="row">
+        <a href="">Check Out My Portfolio</a>
+        <a href="">Connect With Me <span>&#x27f6</span></a>
+        <span>You Can Explore My Portfolio And<br>Projects Here.</span> 
+    </div>
+ </div>
+ <div class="social-icons">
+    <a href=""><img src="images/github.png"></a>
+    <a href=""><img src="images/linkedin.png"></a>
+    <a href=""><img src="images/email.png"></a>
+ </div>
+</div>
 </body>
- 
-
 </html>
